fix: udpated dark mode for today view in rbc

--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -201,3 +201,6 @@
 html[data-theme='dark'] .rbc-off-range-bg {
     background-color: var(--teal-1);
 }
+html[data-theme='dark'] .rbc-today {
+    background-color: var(--teal-2);
+}
